# METest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.hxml
assets/: alitrophy.glb  code.hl
assets/shaders/: fragment.hlsl  vertex.hlsl
script/: LogTest.hx  Main.hx  OtherUpdate.hx  SinUpdate.hx  TestComponent.hx  TestUpdate.hx  ref.hxml
src/: main.cpp
src/render/: SimpleRenderPipeline.cpp  SimpleRenderPipeline.h
